--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,4 +7,4 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
       - name: info
-        run: echo ${{toJSON(github)}}
+        run: echo "${{toJSON(github)}}"
