--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,10 @@
 name: info 
 on: 
   issues:
-    types: [opened]
+    types: [opened,edited]
+  push:
+    branches:
+      - master
 jobs:
   info:
     runs-on: ubuntu-latest
