--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,5 @@
 name: info 
-on: 
-  issues:
-    types: [opened,edited]
-  push:
-    branches:
-      - master
+on: issues
 jobs:
   info:
     runs-on: ubuntu-latest
